# Struktur

./: .gitignore  CMakeLists.txt  NewClass.Bat  build-web.bat  build-windows-debug.bat  build-windows.bat  clean.bat  rebuild-web.bat  rebuild-windows-debug.bat  rebuild-windows.bat
assets/Levels/: ExampleLDKTLevel.ldtk  MemoryPalace.ldtk
assets/Levels/ExampleLDKTLevel/tiled/: 0002_Level_1.tmx  ExampleLDKTLevel.world
assets/Settings/InputBindings/: InputBindings.xml
assets/Tiles/: Library.aseprite  MemoryPalaceCollisionTiles.aseprite
src/: main.cpp
src/Debug/: Assertions.h  Box2DDebugRenderer.h
src/ECS/: GameObjectManager.cpp  GameObjectManager.h
src/ECS/Component/: Identifier.h  PhysicsBody.h  Player.h  Sprite.h  Transform.h
src/ECS/System/: DebugSystem.cpp  DebugSystem.h  GameObjectManager.h  HierrarchySystem.cpp  HierrarchySystem.h  PhysicsSystem.cpp  PhysicsSystem.h  PlayerSystem.cpp  PlayerSystem.h  SpriteRenderSystem.cpp  SpriteRenderSystem.h  TransformSystem.cpp  TransformSystem.h
src/Engine/: Game.cpp  Game.h  GameContext.h
src/Engine/Core/: Game.cpp  Game.h  GameContext.cpp  GameContext.h  GameData.h  Input.cpp  Input.h  ResourcePool.cpp  ResourcePool.h  SystemManager.cpp  SystemManager.h
src/Engine/Core/Resource/: FontResource.h  MusicResource.h  Resource.h  ResourceManager.h  ResourcePool.cpp  ResourcePool.h  ResourcePtr.h  SoundResource.h  TextureResource.cpp  TextureResource.h  TextureResourse.h
src/Engine/ECS/: GameObjectManager.cpp  GameObjectManager.h  SystemManager.cpp  SystemManager.h
src/Engine/ECS/Component/: Camera.h  Identifier.h  Level.h  Player.h  Sprite.h  SpriteAnimation.h  TileMap.h  Transform.h
src/Engine/ECS/System/: AnimationSystem.cpp  AnimationSystem.h  CameraSystem.cpp  CameraSystem.h  DebugSystem.cpp  DebugSystem.h  GameplaySystem.cpp  GameplaySystem.h  HierrarchySystem.cpp  HierrarchySystem.h  PhysicsSystem.cpp  PhysicsSystem.h  PlayerSystem.cpp  PlayerSystem.h  SpriteRenderSystem.cpp  SpriteRenderSystem.h  TransformSystem.cpp  TransformSystem.h  UISystem.cpp  UISystem.h
src/Engine/FileLoading/: LevelParser.cpp  LevelParser.h
src/Engine/Game/: Camera.cpp  Camera.h  Level.cpp  Level.h  State.h  StateManager.cpp  StateManager.h  TileMap.h
src/Engine/Physics/: CollisionLayers.cpp  ContactListener.cpp  ContactListener.h  PhysicsWorld.cpp  PhysicsWorld.h
src/Engine/Physics/CollisionShapeGenerators/: TileMapCollisionBodyGenerator.cpp  TileMapCollisionBodyGenerator.h
src/Engine/UI/: FocusNavigator.cpp  FocusNavigator.h  UIElement.cpp  UIElement.h  UILabel.cpp  UILabel.h  UIManager.cpp  UIManager.h  UIPanel.cpp  UIPanel.h
src/Engine/Util/: Noise.cpp  Noise.h
src/FileLoading/: LevelParser.cpp  LevelParser.h
src/Game/: Level.cpp  Level.h
src/Gameplay/GameObjects/: Door.h  Item.h  NPC.h  Player.cpp  Player.h
src/Gameplay/GameplayStates/: GameWorldState.h  InteractState.h  InventoryState.h
src/Physics/: CollisionLayers.h  ContactListener.h  PhysicsWorld.cpp  PhysicsWorld.h
web/: shell.html
